--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-  "core": false,
+  "core": true,
   "ts": true,
   "license": "MIT",
   "services": [
     "circleci"
   ],
-  "minNodeVersion": "10.15.3"
+  "minNodeVersion": "12.0.0"
 }
