chore: remove typedoc

--- a/package.json
+++ b/package.json
@@ -8,6 +8,18 @@
     "build/index.d.ts",
     "build/index.js"
   ],
+  "scripts": {
+    "mrm": "mrm --preset=@adonisjs/mrm-preset",
+    "pretest": "npm run lint",
+    "test": "node japaFile.js",
+    "lint": "eslint . --ext=.ts",
+    "clean": "del build",
+    "compile": "npm run lint && npm run clean && tsc",
+    "build": "npm run compile",
+    "commit": "git-cz",
+    "release": "np",
+    "version": "npm run build"
+  },
   "dependencies": {},
   "peerDependencies": {
     "@adonisjs/fold": "6.x.x"
@@ -32,22 +44,7 @@
     "mrm": "^2.2.0",
     "np": "^5.2.1",
     "ts-node": "^8.8.2",
-    "typedoc": "^0.17.4",
-    "typedoc-plugin-external-module-name": "^3.0.0",
-    "typedoc-plugin-markdown": "^2.2.17",
     "typescript": "^3.8.3"
-  },
-  "scripts": {
-    "mrm": "mrm --preset=@adonisjs/mrm-preset",
-    "pretest": "npm run lint",
-    "test": "node japaFile.js",
-    "lint": "eslint . --ext=.ts",
-    "clean": "del build",
-    "compile": "npm run lint && npm run clean && tsc",
-    "build": "npm run compile && typedoc --theme markdown --excludePrivate --HideSources && git add docs",
-    "commit": "git-cz",
-    "release": "np",
-    "version": "npm run build"
   },
   "repository": {
     "type": "git",
