chore: update/format meta files

--- a/config.json
+++ b/config.json
@@ -1,7 +1,13 @@
 {
-	"core": true,
+	"core": false,
 	"ts": true,
 	"license": "MIT",
-	"services": ["circleci"],
-	"minNodeVersion": "12.0.0"
+	"services": [
+		"circleci"
+	],
+	"minNodeVersion": "12.18.2",
+	"probotApps": [
+		"stale",
+		"lock"
+	]
 }
