--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
 		"sync-labels": "github-label-sync --labels ./node_modules/@adonisjs/mrm-preset/gh-labels.json poppinss/hooks"
 	},
 	"peerDependencies": {
-		"@adonisjs/fold": "^6.0.0 | ^7.0.0"
+		"@adonisjs/application": "^3.0.0"
 	},
 	"peerDependenciesMeta": {
-		"@adonisjs/fold": {
+		"@adonisjs/application": {
 			"optional": true
 		}
 	},
 	"devDependencies": {
-		"@adonisjs/fold": "^7.0.8",
+		"@adonisjs/application": "^3.0.20",
 		"@adonisjs/mrm-preset": "^2.4.0",
 		"@adonisjs/require-ts": "^1.0.0",
 		"@types/node": "^14.11.1",
