--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
 		"japa": "^3.1.1",
 		"mrm": "^2.5.15",
 		"np": "^7.3.0",
-		"npm-audit-html": "^1.4.3",
 		"prettier": "^2.2.1",
 		"typescript": "^4.1.3"
 	},
@@ -77,7 +76,7 @@
 	},
 	"husky": {
 		"hooks": {
-			"pre-commit": "doctoc README.md --title='## Table of contents' && git add README.md && npm audit --production --json | ./node_modules/.bin/npm-audit-html && git add npm-audit.html",
+			"pre-commit": "doctoc README.md --title='## Table of contents' && git add README.md",
 			"commit-msg": "node ./node_modules/@adonisjs/mrm-preset/validateCommit/conventional/validate.js"
 		}
 	},
