--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build/index.d.ts",
     "build/index.js"
   ],
+  "exports": {
+    ".": "./build/index.js"
+  },
   "scripts": {
     "mrm": "mrm --preset=@adonisjs/mrm-preset",
     "pretest": "npm run lint",
@@ -23,16 +26,7 @@
     "lint": "eslint . --ext=.ts",
     "sync-labels": "github-label-sync --labels ./node_modules/@adonisjs/mrm-preset/gh-labels.json poppinss/hooks"
   },
-  "peerDependencies": {
-    "@adonisjs/application": ">=4.0.0"
-  },
-  "peerDependenciesMeta": {
-    "@adonisjs/application": {
-      "optional": true
-    }
-  },
   "devDependencies": {
-    "@adonisjs/application": "^5.1.8",
     "@adonisjs/mrm-preset": "^5.0.2",
     "@adonisjs/require-ts": "^2.0.7",
     "@types/node": "^17.0.6",
@@ -73,11 +67,6 @@
     "extension": [
       ".ts"
     ]
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "node ./node_modules/@adonisjs/mrm-preset/validateCommit/conventional/validate.js"
-    }
   },
   "config": {
     "commitizen": {
