--- a/package.json
+++ b/package.json
@@ -3,52 +3,29 @@
   "version": "6.0.2-0",
   "description": "A no brainer hooks module for execute before/after lifecycle hooks",
   "main": "build/index.js",
+  "type": "module",
   "files": [
     "build/src",
     "build/index.d.ts",
     "build/index.js"
   ],
   "exports": {
-    ".": "./build/index.js"
+    ".": "./build/index.js",
+    "./types": "./build/src/types.js"
   },
   "scripts": {
-    "mrm": "mrm --preset=@adonisjs/mrm-preset",
     "pretest": "npm run lint",
-    "test": "node .bin/test.js",
-    "clean": "del build",
+    "test": "c8 npm run vscode:test",
+    "clean": "del-cli build",
     "compile": "npm run lint && npm run clean && tsc",
     "build": "npm run compile",
-    "commit": "git-cz",
-    "release": "np --message=\"chore(release): %s\"",
+    "release": "np",
     "version": "npm run build",
     "format": "prettier --write .",
     "prepublishOnly": "npm run build",
     "lint": "eslint . --ext=.ts",
-    "sync-labels": "github-label-sync --labels ./node_modules/@adonisjs/mrm-preset/gh-labels.json poppinss/hooks"
-  },
-  "devDependencies": {
-    "@adonisjs/mrm-preset": "^5.0.2",
-    "@adonisjs/require-ts": "^2.0.9",
-    "@types/node": "^17.0.18",
-    "commitizen": "^4.2.4",
-    "cz-conventional-changelog": "^3.3.0",
-    "del-cli": "^4.0.1",
-    "doctoc": "^2.0.1",
-    "eslint": "^8.9.0",
-    "eslint-config-prettier": "^8.4.0",
-    "eslint-plugin-adonis": "^2.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "github-label-sync": "^2.0.1",
-    "husky": "^7.0.1",
-    "japa": "^4.0.0",
-    "mrm": "^3.0.2",
-    "np": "^7.5.0",
-    "prettier": "^2.3.2",
-    "typescript": "^4.5.5"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/poppinss/hooks.git"
+    "sync-labels": "github-label-sync --labels .github/labels.json poppinss/hooks",
+    "vscode:test": "node --loader=ts-node/esm bin/test.ts"
   },
   "keywords": [
     "hooks",
@@ -56,40 +33,37 @@
   ],
   "author": "virk,poppinss",
   "license": "MIT",
+  "devDependencies": {
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "@japa/assert": "^1.3.6",
+    "@japa/expect-type": "^1.0.2",
+    "@japa/run-failed-tests": "^1.1.0",
+    "@japa/runner": "^2.2.2",
+    "@japa/spec-reporter": "^1.3.2",
+    "@swc/core": "^1.3.11",
+    "@types/node": "^17.0.18",
+    "c8": "^7.12.0",
+    "del-cli": "^4.0.1",
+    "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-adonis": "^3.0.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "github-label-sync": "^2.0.1",
+    "husky": "^7.0.4",
+    "np": "^7.5.0",
+    "prettier": "^2.3.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.5.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/poppinss/hooks.git"
+  },
   "bugs": {
     "url": "https://github.com/poppinss/hooks/issues"
   },
   "homepage": "https://github.com/poppinss/hooks#readme",
-  "nyc": {
-    "exclude": [
-      "test"
-    ],
-    "extension": [
-      ".ts"
-    ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
-  },
-  "np": {
-    "contents": ".",
-    "anyBranch": false
-  },
-  "mrmConfig": {
-    "core": false,
-    "license": "MIT",
-    "services": [
-      "github-actions"
-    ],
-    "minNodeVersion": "16.13.1",
-    "probotApps": [
-      "stale",
-      "lock"
-    ],
-    "runGhActionsOnWindows": false
-  },
   "eslintConfig": {
     "extends": [
       "plugin:adonis/typescriptPackage",
@@ -120,8 +94,28 @@
     "arrowParens": "always",
     "printWidth": 100
   },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
   "publishConfig": {
     "access": "public",
     "tag": "next"
+  },
+  "np": {
+    "message": "chore(release): %s",
+    "tag": "next",
+    "branch": "main",
+    "anyBranch": false
+  },
+  "c8": {
+    "reporter": [
+      "text",
+      "html"
+    ],
+    "exclude": [
+      "tests/**"
+    ]
   }
 }
