--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "author": "virk,poppinss",
   "license": "MIT",
   "devDependencies": {
+    "@adonisjs/eslint-config": "^1.1.5",
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
     "@japa/assert": "^1.4.1",
@@ -46,9 +47,6 @@
     "c8": "^8.0.0",
     "del-cli": "^5.0.0",
     "eslint": "^8.43.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-adonis": "^3.0.3",
-    "eslint-plugin-prettier": "^4.2.1",
     "github-label-sync": "^2.3.1",
     "husky": "^8.0.3",
     "np": "^8.0.4",
@@ -64,26 +62,6 @@
     "url": "https://github.com/poppinss/hooks/issues"
   },
   "homepage": "https://github.com/poppinss/hooks#readme",
-  "eslintConfig": {
-    "extends": [
-      "plugin:adonis/typescriptPackage",
-      "prettier"
-    ],
-    "plugins": [
-      "prettier"
-    ],
-    "rules": {
-      "prettier/prettier": [
-        "error",
-        {
-          "endOfLine": "auto"
-        }
-      ]
-    }
-  },
-  "eslintIgnore": [
-    "build"
-  ],
   "prettier": {
     "trailingComma": "es5",
     "semi": false,
@@ -117,5 +95,8 @@
     "exclude": [
       "tests/**"
     ]
+  },
+  "eslintConfig": {
+    "extends": "@adonisjs/eslint-config/package"
   }
 }
