--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "license": "MIT",
   "devDependencies": {
     "@adonisjs/eslint-config": "^1.1.5",
+    "@adonisjs/prettier-config": "^1.1.5",
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
     "@japa/assert": "^1.4.1",
@@ -62,16 +63,6 @@
     "url": "https://github.com/poppinss/hooks/issues"
   },
   "homepage": "https://github.com/poppinss/hooks#readme",
-  "prettier": {
-    "trailingComma": "es5",
-    "semi": false,
-    "singleQuote": true,
-    "useTabs": false,
-    "quoteProps": "consistent",
-    "bracketSpacing": true,
-    "arrowParens": "always",
-    "printWidth": 100
-  },
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
@@ -98,5 +89,6 @@
   },
   "eslintConfig": {
     "extends": "@adonisjs/eslint-config/package"
-  }
+  },
+  "prettier": "@adonisjs/prettier-config"
 }
