--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@adonisjs/eslint-config": "^1.1.5",
     "@adonisjs/prettier-config": "^1.1.5",
+    "@adonisjs/tsconfig": "^1.1.5",
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
     "@japa/assert": "^1.4.1",
