--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "pretest": "npm run lint",
-    "test": "c8 npm run vscode:test",
+    "test": "c8 npm run quick:test",
     "clean": "del-cli build",
     "compile": "npm run lint && npm run clean && tsc",
     "build": "npm run compile",
@@ -28,7 +28,7 @@
     "prepublishOnly": "npm run build",
     "lint": "eslint . --ext=.ts",
     "sync-labels": "github-label-sync --labels .github/labels.json poppinss/hooks",
-    "vscode:test": "node --loader=ts-node/esm bin/test.ts"
+    "quick:test": "node --loader=ts-node/esm bin/test.ts"
   },
   "keywords": [
     "hooks",
@@ -42,11 +42,9 @@
     "@adonisjs/tsconfig": "^1.1.6",
     "@commitlint/cli": "^17.6.6",
     "@commitlint/config-conventional": "^17.6.6",
-    "@japa/assert": "^1.4.1",
-    "@japa/expect-type": "^1.0.3",
-    "@japa/run-failed-tests": "^1.1.1",
-    "@japa/runner": "^2.5.1",
-    "@japa/spec-reporter": "^1.3.3",
+    "@japa/assert": "^2.0.0-1",
+    "@japa/expect-type": "^2.0.0-0",
+    "@japa/runner": "^3.0.0-2",
     "@swc/core": "^1.3.67",
     "@types/node": "^20.3.2",
     "c8": "^8.0.0",
