--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pretest": "npm run lint",
     "test": "c8 npm run quick:test",
     "clean": "del-cli build",
+     "typecheck": "tsc --noEmit",
     "compile": "npm run lint && npm run clean && tsc",
     "build": "npm run compile",
     "release": "np",
