--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "prepublishOnly": "npm run build",
     "lint": "eslint . --ext=.ts",
     "sync-labels": "github-label-sync --labels .github/labels.json poppinss/hooks",
-    "quick:test": "node --loader=ts-node/esm bin/test.ts"
+    "quick:test": "cross-env NODE_DEBUG=poppinss:hooks node --loader=ts-node/esm bin/test.ts"
   },
   "keywords": [
     "hooks",
@@ -50,6 +50,7 @@
     "@swc/core": "^1.3.100",
     "@types/node": "^20.10.4",
     "c8": "^8.0.1",
+    "cross-env": "^7.0.3",
     "del-cli": "^5.1.0",
     "eslint": "^8.55.0",
     "github-label-sync": "^2.3.1",
